--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+1
+version: 1.0.1+2
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -25,15 +25,42 @@ dependencies:
     sdk: flutter
 
 
-  # The following adds the Cupertino Icons font to your application.
+ # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
-  firebase_auth: ^0.18.0+1
-  cloud_firestore: ^0.14.0+2
+  http: ^0.12.2
+  flutter_spinkit: ^4.1.2+1
+  font_awesome_flutter: ^8.8.1
+  smooth_star_rating: ^1.1.1
+  intl: ^0.16.0
+  firebase_auth: ^0.16.1
+  cloud_firestore: ^0.13.7
+  provider: ^4.3.1
+  firebase_database: ^3.1.6 
+  carousel_slider: ^1.4.1
+  link: ^1.1.0
+  url_launcher: ^5.5.0
+  flutter_email_sender: ^3.0.1
+  photo_view: ^0.10.2
+  webview_flutter: ^0.3.22+1
+  tuple: ^1.0.3
+  carousel_pro: ^1.0.0
+  flutter_swiper: ^1.1.6
+  flutter_staggered_grid_view: ^0.3.2
+  rubber: ^0.4.0
+  pin_code_text_field: ^1.7.1
+  country_code_picker: ^1.1.5
+  flutter_rating_bar: ^1.3.0+1
+  numberpicker: ^1.0.0
+  flare_splash_screen: ^2.1.2
+  flutter_svg: ^0.18.1
+  flutter_session: ^0.1.1
+  flappy_search_bar: ^1.7.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.7.2+1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -47,10 +74,20 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
-
+  assets:
+   - assets/slider0.jpg
+   - assets/slider1.jpg
+   - assets/slider2.jpg
+   - assets/slider3.jpg
+   - assets/slider4.jpg
+   - assets/nainy.png
+   - assets/shop.jpg
+   - assets/shop2.jpg
+   - assets/shop3.jpg
+   - assets/nivea.jpg
+   - assets/parfun.jpg
+   - assets/pate1.jpg
+   - assets/samsung.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
@@ -76,3 +113,7 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/nainy.png"
